4.0 regression: old RC leaks
Starts:
vlc -Ioldrc udp:// -vv
and exit:
==3716==ERROR: LeakSanitizer: detected memory leaks
Direct leak of 368 byte(s) in 1 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f3c8d4ac518 in calloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0xe9518)
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f3c8c6750c6 in input_item_NewExt ../../src/input/item.c:1057
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f3c8c62ecc5 in intf_InsertItem ../../src/interface/interface.c:205
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f3c8c5bf9f4 in GetFilenames ../../src/libvlc.c:500
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f3c8c5be900 in libvlc_InternalInit ../../src/libvlc.c:351
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f3c8d2d0695 in libvlc_new ../../lib/core.c:57
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x557deef7b271 in main ../../bin/vlc.c:229
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f3c8aea809a in __libc_start_main ../csu/libc-start.c:308
Indirect leak of 240 byte(s) in 1 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f3c8d4ac330 in __interceptor_malloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0xe9330)
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f3c8c78303f in vlc_meta_New ../../src/input/meta.c:92
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f3c8c6678b3 in input_item_SetMeta ../../src/input/item.c:141
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f3c8c718e06 in input_item_SetNowPlaying ../../include/vlc_input_item.h:309
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f3c8c720c83 in Create ../../src/input/input.c:484
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f3c8c71cd48 in input_Create ../../src/input/input.c:137
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f3c8c750a80 in vlc_player_input_New ../../src/input/player.c:672
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f3c8c75204a in vlc_player_OpenNextMedia ../../src/input/player.c:752
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f3c8c76fe9f in vlc_player_SetCurrentMedia ../../src/input/player.c:2103
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f3c8c63c23b in vlc_playlist_SetCurrentMedia ../../src/playlist/control.c:159
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7f3c8c63e16c in vlc_playlist_GoTo ../../src/playlist/control.c:410
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f3c8c62edfa in libvlc_InternalPlay ../../src/interface/interface.c:237
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7f3c8d2d6cb1 in libvlc_playlist_play ../../lib/playlist.c:36
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x557deef7b401 in main ../../bin/vlc.c:248
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7f3c8aea809a in __libc_start_main ../csu/libc-start.c:308
Indirect leak of 112 byte(s) in 1 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f3c8d4ac518 in calloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0xe9518)
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f3c8c71f449 in Create ../../src/input/input.c:362
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f3c8c71cd48 in input_Create ../../src/input/input.c:137
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f3c8c750a80 in vlc_player_input_New ../../src/input/player.c:672
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f3c8c75204a in vlc_player_OpenNextMedia ../../src/input/player.c:752
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f3c8c76fe9f in vlc_player_SetCurrentMedia ../../src/input/player.c:2103
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f3c8c63c23b in vlc_playlist_SetCurrentMedia ../../src/playlist/control.c:159
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f3c8c63e16c in vlc_playlist_GoTo ../../src/playlist/control.c:410
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f3c8c62edfa in libvlc_InternalPlay ../../src/interface/interface.c:237
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f3c8d2d6cb1 in libvlc_playlist_play ../../lib/playlist.c:36
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x557deef7b401 in main ../../bin/vlc.c:248
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f3c8aea809a in __libc_start_main ../csu/libc-start.c:308
Indirect leak of 7 byte(s) in 1 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f3c8d4ac330 in __interceptor_malloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0xe9330)
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f3c8aefc4b7 in _IO_vasprintf /build/glibc-vjB4T1/glibc-2.28/libio/vasprintf.c:73
Indirect leak of 7 byte(s) in 1 object(s) allocated from:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f3c8d3fd810 in strdup (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x3a810)
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f3c8c669feb in input_item_SetURI ../../src/input/item.c:336
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f3c8c675324 in input_item_NewExt ../../src/input/item.c:1074
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f3c8c62ecc5 in intf_InsertItem ../../src/interface/interface.c:205
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f3c8c5bf9f4 in GetFilenames ../../src/libvlc.c:500
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f3c8c5be900 in libvlc_InternalInit ../../src/libvlc.c:351
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f3c8d2d0695 in libvlc_new ../../lib/core.c:57
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x557deef7b271 in main ../../bin/vlc.c:229
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f3c8aea809a in __libc_start_main ../csu/libc-start.c:308
SUMMARY: AddressSanitizer: 734 byte(s) leaked in 5 allocation(s).