rc: lock the player only once while processing commands

And avoid racy states due to successive lock/unlock

Refs #22328

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>

Conflicts:
	modules/control/rc.c